<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zitano.steadywin.MainActivity">
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/rate"
        android:title="@string/rate_us_please" />
    <item
        android:id="@+id/privacyP"
        android:title="@string/privacy"/>

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback" />
    <item
        android:id="@+id/ourapps"
        android:title="@string/ourApps"
        />

    <item
        android:id="@+id/about"
        android:title="@string/about" />

</menu>
